# excelToDatabase

./: README.md  pyproject.toml
data/: sample#fees.xlsx
src/: main.py
